--- a/portfolio.html
+++ b/portfolio.html
@@ -27,6 +27,14 @@
         text-align: center;
         padding: 2rem;
         }
+        .home-image {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%; /* 원형 이미지 */
+            object-fit: cover;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+        }
 
         h1, h2 {
             
@@ -87,6 +95,7 @@
     
     <section id="home">
         <div class="section-container">
+            <img src="img/프로필 이미지.jpg" alt="프로필 이미지" class="home-image">
             <h2>안녕하세요. 신입 웹 개발자 박혜빈 입니다.</h2>      
             <p>현재는 python과 웹 개발 기술을 중심으로 배우고 있으며 다양한 프로젝트를 통해 실력을 키워나가고 있습니다.</p>
             <a href="#about" class="btn">▼ ▼</a>
