--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,42 @@
     
     <section id="about">
         <h2>about</h2>
-        <p>저는 책임감 있게 배우고 성장해나가는 개발자 지망생입니다. <br>
-           배움과 협업을 통해 사용자 중심의 웹 서비스를 만드는 것이 목표입니다.</p>
+        <p># 프론트엔드 개발자 지원 자기소개서<br>
+
+## 1. 개발자가 되고 싶은 이유 <br>
+
+노무법인에서 근무하며 법무 업무를 처리하던 중, 업무 효율성을 높이기 위해 다양한 디지털 도구들을 접하게 되었습니다.
+특히 클라이언트와 직접 소통하는 웹 인터페이스의 중요성을 실감했고, 사용자 경험이 업무 성과에 미치는 영향을 체감했습니다.
+
+이후 전기회사에서 인턴으로 근무하며 설계도면을 디지털화하는 작업을 담당했는데,
+단순해 보이는 작업이지만 데이터의 체계적인 관리와 사용자 친화적인 인터페이스가 얼마나 중요한지 깨달았습니다.
+기존 시스템의 불편함을 개선하고 싶다는 생각이 들었고, 특히 사용자가 직접 마주하는 프론트엔드 영역에 매력을 느꼈습니다.
+
+다양한 경험을 통해 문제를 발견하고 해결책을 모색하는 과정에서 성취감을 느꼈으며,
+이러한 경험들이 개발자라는 새로운 길을 선택하게 된 동기가 되었습니다.<br><br>
+
+## 2. 개발자가 되기 위한 준비 과정<br>
+
+현재 국비교육과정을 통해 체계적으로 개발 지식을 습득하고 있습니다.
+4개월간 JavaScript, HTML, CSS의 기초를 다지며 웹 개발의 전반적인 이해도를 높였고, Spring Boot를 통해 백엔드와의 연동 방식도 학습해나가고있습니다.
+
+특히 조별 프로젝트에서 출결관리 시스템을 개발하며 Qt Designer, Python, Oracle 등 다양한 기술 스택을 경험했습니다.
+비록 주어진 시간이 짧아 완성도는 아쉬웠지만, 실제 개발 과정에서 발생하는 다양한 문제상황을 경험하고 해결방안을 모색하는 값진 경험을 얻었습니다.
+
+앞으로 남은 2개월 동안은 React 학습에 집중하여 현대적인 프론트엔드 개발 역량을 갖추고, 개인 프로젝트를 통해 실전 경험을 쌓을 계획입니다.
+또한 기존 노무 분야 경험을 활용하여 업무 프로세스를 이해하고 사용자 관점에서 생각하는 개발자가 되고자 합니다.<br><br>
+
+## 3. 지원하는 각오<br>
+
+비전공자로서 늦은 시작이지만, 오히려 다양한 분야에서의 경험이 개발자로서의 차별화된 강점이 될 것이라고 확신합니다.
+체계적인 업무 처리 경험과 다양한 클라이언트와의 소통 경험은 사용자 중심의 개발 사고를 갖추는 데 큰 도움이 될 것입니다.
+
+현재 기술적으로는 초보 단계이지만, 끊임없이 학습하고 성장하는 자세로 임하겠습니다.
+기초가 부족한 만큼 더욱 겸손한 마음으로 배우고, 작은 업무부터 차근차근 익혀나가며 팀에 기여할 수 있는 개발자가 되겠습니다.
+
+특히 프론트엔드 개발자로서 사용자가 직접 체감할 수 있는 가치를 만들어내는 일에 보람을 느끼며, 회사의 성장과 함께 성장하는 개발자가 되겠습니다.
+부족한 점은 열정과 노력으로 채워나가겠다는 각오로 지원하였습니다.
+</p>
     </section>
 
     <section id="skills">
