--- a/portfolio.html
+++ b/portfolio.html
@@ -28,42 +28,60 @@
     
     <section id="about">
         <h2>about</h2>
-        <p># 프론트엔드 개발자 지원 자기소개서<br>
+        <div class="position-about">
+        <div class="resume-container">
+            <div class="section-block">
+                <div class="section-title">개발자가 되고 싶은 이유</div>
+                <div class="section-content">
+                    <p> 노무법인에서 근무하며 다양한 디지털 도구들을 접하게 되었습니다.
+                    이 과정에서 직관적인 인터페이스와 사용자 경험이 업무 성과에 미치는 영향을 체감했고, 좋은 시스템이 업무 환경을 실질적으로 바꿀 수 있다는 사실을 깨달았습니다.</p>
 
-## 1. 개발자가 되고 싶은 이유 <br>
+                    <p>이후 전기 관련 회사에서 인턴으로 근무하며 설계도면 디지털화 작업과 부서 업무 매뉴얼 제작을 맡았습니다.
+                    각 부서와 자료를 ERP 프로그램으로 공유하며 관리하는 형태였는데, 시스템 자동화가 부족하여 많은 과정을 수작업으로 진행해야 했고, 이로 인해 휴먼 에러가 빈번히 발생했습니다.</p>
 
-노무법인에서 근무하며 법무 업무를 처리하던 중, 업무 효율성을 높이기 위해 다양한 디지털 도구들을 접하게 되었습니다.
-특히 클라이언트와 직접 소통하는 웹 인터페이스의 중요성을 실감했고, 사용자 경험이 업무 성과에 미치는 영향을 체감했습니다.
+                    <p>문제 상황을 분석하고 매뉴얼로 정리하며 사용자 관점에서 시스템의 한계를 파악할 수 있었고,
+                    결재 과정에서 이를 상급자에게 제안한 결과, 새로운 ERP 프로그램 도입 시 베타 테스터로 참여하게 되었습니다.
+                    사용성 개선 포인트를 분석하고, 상세한 피드백 보고서를 작성하며 사용자의 니즈를 기술적으로 해결하는 일에 매력을 느꼈습니다.</p>
 
-이후 전기회사에서 인턴으로 근무하며 설계도면을 디지털화하는 작업을 담당했는데,
-단순해 보이는 작업이지만 데이터의 체계적인 관리와 사용자 친화적인 인터페이스가 얼마나 중요한지 깨달았습니다.
-기존 시스템의 불편함을 개선하고 싶다는 생각이 들었고, 특히 사용자가 직접 마주하는 프론트엔드 영역에 매력을 느꼈습니다.
+                    <p>특히 복잡한 기능을 사용자에게 직관적으로 전달하고, 사용자가 실제로 마주하는 인터페이스를 개선하는 일에서 큰 보람을 느꼈습니다.
+                    단순히 문제를 인식하는 것을 넘어, 직접 코드로 해결책을 구현할 수 있다는 점에 감명을 받았고,
+                    사용자 경험을 실질적으로 바꿔나가는 개발자의 역할에 매력을 느껴 이 길을 선택하게 되었습니다.</p>
+                </div>
+            </div>
+            
 
-다양한 경험을 통해 문제를 발견하고 해결책을 모색하는 과정에서 성취감을 느꼈으며,
-이러한 경험들이 개발자라는 새로운 길을 선택하게 된 동기가 되었습니다.<br><br>
+            <div class="section-block">
+                <div class="section-title">개발자가 되기 위한 준비 과정</div>
+                <div class="section-content">
+                    <p>현재 국비교육과정을 통해 체계적으로 개발 지식을 습득하고 있습니다.
+                    HTML, CSS, JavaScript의 기초를 탄탄히 다지며 웹 개발의 핵심 원리를 이해했고, 사용자 인터페이스와 사용자 경험에 중점을 둔 프론트엔드 개발 역량을 기르고 있습니다.</p>
+                    <p>특히 조별 프로젝트에서 출결관리 시스템을 개발하며 Python과 Oracle을 활용한 데이터 처리부터 사용자 인터페이스 구현까지 전체적인 개발 프로세스를 경험했습니다.
+                    비록 주어진 시간이 짧아 완성도는 아쉬웠지만, 팀 내에서의 협업 방식, 코드 통합 과정에서 발생하는 충돌 해결,
+                    사용자 피드백 반영 등 실제 개발 현장에서 마주할 수 있는 다양한 상황들을 미리 경험할 수 있었습니다.</p>
+                    <p>앞으로 남은 교육 기간 동안은 JavaScript를 더욱 심화 학습하여 동적이고 인터랙티브한 웹 페이지 구현 능력을 기르고,
+                    개인 프로젝트를 통해 사용자 중심의 인터페이스 설계와 구현 능력을 기를 계획입니다.</p>
+                    <p>또한 기존 업무 경험을 바탕으로 실제 업무 프로세스를 깊이 이해하고, 사용자의 불편함을 해결하는 관점에서 접근하는 개발자가 되고자 합니다.
+                    아직 배우고있는 단계이지만, 각 기술을 단순히 배우는 것을 넘어 사용자 경험 개선이라는 목표로 활용하는 방법을 지속적으로 학습하고 있으며,
+                    새로운 기술 스택에 대한 학습 의지와 적응력을 갖추고 있습니다.</p>
+                </div>
+            </div>
 
-## 2. 개발자가 되기 위한 준비 과정<br>
 
-현재 국비교육과정을 통해 체계적으로 개발 지식을 습득하고 있습니다.
-4개월간 JavaScript, HTML, CSS의 기초를 다지며 웹 개발의 전반적인 이해도를 높였고, Spring Boot를 통해 백엔드와의 연동 방식도 학습해나가고있습니다.
-
-특히 조별 프로젝트에서 출결관리 시스템을 개발하며 Qt Designer, Python, Oracle 등 다양한 기술 스택을 경험했습니다.
-비록 주어진 시간이 짧아 완성도는 아쉬웠지만, 실제 개발 과정에서 발생하는 다양한 문제상황을 경험하고 해결방안을 모색하는 값진 경험을 얻었습니다.
-
-앞으로 남은 2개월 동안은 React 학습에 집중하여 현대적인 프론트엔드 개발 역량을 갖추고, 개인 프로젝트를 통해 실전 경험을 쌓을 계획입니다.
-또한 기존 노무 분야 경험을 활용하여 업무 프로세스를 이해하고 사용자 관점에서 생각하는 개발자가 되고자 합니다.<br><br>
-
-## 3. 지원하는 각오<br>
-
-비전공자로서 늦은 시작이지만, 오히려 다양한 분야에서의 경험이 개발자로서의 차별화된 강점이 될 것이라고 확신합니다.
-체계적인 업무 처리 경험과 다양한 클라이언트와의 소통 경험은 사용자 중심의 개발 사고를 갖추는 데 큰 도움이 될 것입니다.
-
-현재 기술적으로는 초보 단계이지만, 끊임없이 학습하고 성장하는 자세로 임하겠습니다.
-기초가 부족한 만큼 더욱 겸손한 마음으로 배우고, 작은 업무부터 차근차근 익혀나가며 팀에 기여할 수 있는 개발자가 되겠습니다.
-
-특히 프론트엔드 개발자로서 사용자가 직접 체감할 수 있는 가치를 만들어내는 일에 보람을 느끼며, 회사의 성장과 함께 성장하는 개발자가 되겠습니다.
-부족한 점은 열정과 노력으로 채워나가겠다는 각오로 지원하였습니다.
-</p>
+            <div class="section-block">
+                <div class="section-title">지원하는 각오</div>
+                <div class="section-content">
+                    <p>비전공자로서 늦은 시작이지만, 다양한 회사 시스템을 실제 사용자 입장에서 경험한 것이 프론트엔드 개발자로서 큰 강점이 될 것이라 생각합니다.
+                    실무 현장에서 여러 시스템을 사용하며 겪었던 불편함과 개선 아이디어들을 알고 있기 때문에, 실제 사용자가 원하는 기능과 사용성을 깊이 이해할 수 있습니다.</p>
+                    <p>현재 기술적으로는 초보 단계이지만, 온라인 강의와 개발 서적을 통해 기초 이론을 학습하고 간단한 작업을 구현해보며 꾸준히 실력을 쌓아가고 있습니다.
+                    부족한 부분은 겸손한 마음으로 배우고, 차근차근 익히며 성장해나가겠습니다.</p>
+                    <p>프론트엔드 개발자는 사용자가 가장 먼저 마주하는 화면을 만드는 역할이기에 큰 책임감을 느낍니다.
+                    과거 시스템 사용 경험에서 느꼈던 "이렇게 하면 더 편할 텐데"라는 아쉬움들을 개발에 반영하여,
+                    단순한 기능 구현을 넘어 사용자의 업무 효율성을 높이고 시간을 절약할 수 있는 직관적인 인터페이스를 만들겠습니다.</p>
+                    <p>사용자 관점에서의 실무 경험을 바탕으로 빠르게 적응하여, 회사의 서비스가 더 많은 사용자에게 사랑받을 수 있도록 기여하는 개발자가 되겠습니다.
+                    현재의 열정과 학습 의지를 지속적으로 유지하며, 개발자로서의 성장이 곧 회사의 성장으로 이어질 수 있도록 최선을 다하겠습니다.</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id="skills">
