--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
             <div class="home-image"></div>
             <h2>안녕하세요. 신입 개발자 박혜빈 입니다.</h2>      
             <p>현재는 python과 웹 개발 기술을 중심으로 배우고 있으며 다양한 프로젝트를 통해 실력을 키워나가고 있습니다.</p>
-            <a href="#about" class="btn">▼ ▼</a>
+            <!-- <a href="#about" class="btn">▼ ▼</a> -->
         </div>
     </section>
     
@@ -31,54 +31,39 @@
         <div class="position-about">
         <div class="resume-container">
             <div class="section-block">
-                <div class="section-title">개발자가 되고 싶은 이유</div>
+                <div class="section-title">💡 개발을 시작하게 된 계기?</div>
                 <div class="section-content">
-                    <p> 노무법인에서 근무하며 다양한 디지털 도구들을 접하게 되었습니다.
-                    이 과정에서 직관적인 인터페이스와 사용자 경험이 업무 성과에 미치는 영향을 체감했고, 좋은 시스템이 업무 환경을 실질적으로 바꿀 수 있다는 사실을 깨달았습니다.</p>
-
-                    <p>이후 전기 관련 회사에서 인턴으로 근무하며 설계도면 디지털화 작업과 부서 업무 매뉴얼 제작을 맡았습니다.
-                    각 부서와 자료를 ERP 프로그램으로 공유하며 관리하는 형태였는데, 시스템 자동화가 부족하여 많은 과정을 수작업으로 진행해야 했고, 이로 인해 휴먼 에러가 빈번히 발생했습니다.</p>
-
-                    <p>문제 상황을 분석하고 매뉴얼로 정리하며 사용자 관점에서 시스템의 한계를 파악할 수 있었고,
-                    결재 과정에서 이를 상급자에게 말씀드린 결과, 새로운 ERP 프로그램 도입 시 베타 테스터로 참여하게 되었습니다.
-                    사용성 개선 포인트를 분석하고, 상세한 피드백 보고서를 작성하며 사용자의 니즈를 기술적으로 해결하는 일에 매력을 느꼈습니다.</p>
-
-                    <p>특히 복잡한 기능을 사용자에게 직관적으로 전달하고, 사용자가 실제로 마주하는 인터페이스를 개선하는 일에서 큰 보람을 느꼈습니다.
-                    단순히 문제를 인식하는 것을 넘어, 직접 코드로 해결책을 구현할 수 있다는 점에 감명을 받았고,
-                    사용자 경험을 실질적으로 바꿔나가는 개발자의 역할에 매력을 느껴 이 길을 선택하게 되었습니다.</p>
+                    노무법인과 전기회사에서 근무하며 <strong>사용자 친화적이지 않은 시스템들</strong>을 경험했습니다. 
+                    ERP 시스템 베타 테스터로 참여하며 사용성 개선 포인트를 분석하고 피드백을 작성하는 과정에서 
+                    <strong>사용자 관점에서 문제를 해결하는 개발</strong>에 매력을 느꼈습니다.
                 </div>
             </div>
             
 
             <div class="section-block">
-                <div class="section-title">개발자가 되기 위한 준비 과정</div>
+                <div class="section-title">📚 현재 학습 과정</div>
                 <div class="section-content">
-                    <p>현재 국비교육과정을 통해 체계적으로 개발 지식을 습득하고 있습니다.
-                    HTML, CSS, JavaScript의 기초를 탄탄히 다지며 웹 개발의 핵심 원리를 이해했고, 사용자 인터페이스와 사용자 경험에 중점을 둔 프론트엔드 개발 역량을 기르고 있습니다.</p>
-                    <p>특히 조별 프로젝트에서 출결관리 시스템을 개발하며 Python과 Oracle을 활용한 데이터 처리부터 사용자 인터페이스 구현까지 전체적인 개발 프로세스를 경험했습니다.
-                    비록 주어진 시간이 짧아 완성도는 아쉬웠지만, 팀 내에서의 협업 방식, 코드 통합 과정에서 발생하는 충돌 해결,
-                    사용자 피드백 반영 등 실제 개발 현장에서 마주할 수 있는 다양한 상황들을 미리 경험할 수 있었습니다.</p>
-                    <p>앞으로 남은 교육 기간 동안은 JavaScript를 더욱 심화 학습하여 동적이고 인터랙티브한 웹 페이지 구현 능력을 기르고,
-                    개인 프로젝트를 통해 사용자 중심의 인터페이스 설계와 구현 능력을 기를 계획입니다.</p>
-                    <p>또한 기존 업무 경험을 바탕으로 실제 업무 프로세스를 깊이 이해하고, 사용자의 불편함을 해결하는 관점에서 접근하는 개발자가 되고자 합니다.
-                    아직 배우고있는 단계이지만, 각 기술을 단순히 배우는 것을 넘어 사용자 경험 개선이라는 목표로 활용하는 방법을 지속적으로 학습하고 있으며,
-                    새로운 기술 스택에 대한 학습 의지와 적응력을 갖추고 있습니다.</p>
+                    국비교육과정을 통해 <strong>HTML, CSS, JavaScript, Python</strong>을 학습 중입니다. 
+                    팀 프로젝트로 출결관리 시스템을 개발하며 <strong>전체 개발 프로세스와 팀 협업</strong>을 경험했습니다. 
+                    현재는 더욱 동적이고 인터랙티브한 웹 페이지 구현 능력을 기르고 있습니다.
                 </div>
             </div>
 
 
             <div class="section-block">
-                <div class="section-title">지원하는 각오</div>
+                <div class="section-title">🎯 나만의 강점</div>
                 <div class="section-content">
-                    <p>비전공자로서 늦은 시작이지만, 다양한 회사 시스템을 실제 사용자 입장에서 경험한 것이 프론트엔드 개발자로서 큰 강점이 될 것이라 생각합니다.
-                    실무 현장에서 여러 시스템을 사용하며 겪었던 불편함과 개선 아이디어들을 알고 있기 때문에, 실제 사용자가 원하는 기능과 사용성을 깊이 이해할 수 있습니다.</p>
-                    <p>현재 기술적으로는 초보 단계이지만, 온라인 강의와 개발 서적을 통해 기초 이론을 학습하고 간단한 작업을 구현해보며 꾸준히 실력을 쌓아가고 있습니다.
-                    부족한 부분은 겸손한 마음으로 배우고, 차근차근 익히며 성장해나가겠습니다.</p>
-                    <p>프론트엔드 개발자는 사용자가 가장 먼저 마주하는 화면을 만드는 역할이기에 큰 책임감을 느낍니다.
-                    과거 시스템 사용 경험에서 느꼈던 "이렇게 하면 더 편할 텐데"라는 아쉬움들을 개발에 반영하여,
-                    단순한 기능 구현을 넘어 사용자의 업무 효율성을 높이고 시간을 절약할 수 있는 직관적인 인터페이스를 만들겠습니다.</p>
-                    <p>사용자 관점에서의 실무 경험을 바탕으로 빠르게 적응하여, 회사의 서비스가 더 많은 사용자에게 사랑받을 수 있도록 기여하는 개발자가 되겠습니다.
-                    현재의 열정과 학습 의지를 지속적으로 유지하며, 개발자로서의 성장이 곧 회사의 성장으로 이어질 수 있도록 최선을 다하겠습니다.</p>
+                    다양한 회사 시스템을 <strong>실제 사용자 입장에서 경험</strong>한 것이 가장 큰 강점입니다. 
+                    사용자가 실제로 원하는 기능과 사용성을 깊이 이해하고 있어, 
+                    <strong>실용적이고 직관적인 인터페이스</strong>를 만들 수 있습니다.
+                </div>
+            </div>
+
+            <div class="section-block">
+                <div class="section-title">🧡 앞으로의 목표</div>
+                <div class="section-content">
+                사용자의 업무 효율성을 높이고 시간을 절약할 수 있는 <strong>직관적인 인터페이스</strong>를 만드는 개발자가 되고 싶습니다. 
+                현재의 열정과 학습 의지를 지속하며, 사용자 경험을 실질적으로 개선하는 프론트엔드 개발자로 성장하겠습니다.
                 </div>
             </div>
         </div>
@@ -430,7 +415,7 @@
         <h2>contact</h2>
         <p>
             이메일 : gpqls3698@naver.com<br>
-            GitHub : <a href="https://github.com/hyebinrk" target="_blank">github.com/yourusername</a>
+            GitHub : <a href="https://github.com/hyebinrk" target="_blank">https://github.com/hyebinrk</a>
         </p>
     </section>
 
